Package_Tools/include-C/Ubuntu_26.04/gtk-4.0/gtk/in_arbeit/h/gtktestatcontext.h

/* gtktestatcontext.h: Test AT context
 *
 * Copyright 2020  GNOME Foundation
 *
 * SPDX-License-Identifier: LGPL-2.1-or-later
 *
 * This library is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Lesser General Public
 * License as published by the Free Software Foundation; either
 * version 2.1 of the License, or (at your option) any later version.
 *
 * This library is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 * Lesser General Public License for more details.
 *
 * You should have received a copy of the GNU Lesser General Public
 * License along with this library; if not, see <http://www.gnu.org/licenses/>.
 */

#pragma once

#if !defined (__GTK_H_INSIDE__) && !defined (GTK_COMPILATION)
#error "Only <gtk/gtk.h> can be included directly."
#endif

#include <gtk/gtkatcontext.h>



/**
 * gtk_test_accessible_assert_role:
 * @accessible: a `GtkAccessible`
 * @role: a `GtkAccessibleRole`
 *
 * Checks whether a `GtkAccessible` implementation has the given @role,
 * and raises an assertion if the condition is failed.
 */

/**
 * gtk_test_accessible_assert_property:
 * @accessible: a `GtkAccessible`
 * @property: a `GtkAccessibleProperty`
 * @...: the value of @property
 *
 * Checks whether a `GtkAccessible` implementation has its accessible
 * property set to the expected value, and raises an assertion if the
 * condition is not satisfied.
 */

/**
 * gtk_test_accessible_assert_relation:
 * @accessible: a `GtkAccessible`
 * @relation: a `GtkAccessibleRelation`
 * @...: the expected value of @relation
 *
 * Checks whether a `GtkAccessible` implementation has its accessible
 * relation set to the expected value, and raises an assertion if the
 * condition is not satisfied.
 */

/**
 * gtk_test_accessible_assert_state:
 * @accessible: a `GtkAccessible`
 * @state: a `GtkAccessibleRelation`
 * @...: the expected value of @state
 *
 * Checks whether a `GtkAccessible` implementation has its accessible
 * state set to the expected value, and raises an assertion if the
 * condition is not satisfied.
 */

extern
gboolean        gtk_test_accessible_has_role            (GtkAccessible         *accessible,
                                                         GtkAccessibleRole      role);
extern
gboolean        gtk_test_accessible_has_property        (GtkAccessible         *accessible,
                                                         GtkAccessibleProperty  property);
extern
gboolean        gtk_test_accessible_has_relation        (GtkAccessible         *accessible,
                                                         GtkAccessibleRelation  relation);
extern
gboolean        gtk_test_accessible_has_state           (GtkAccessible         *accessible,
                                                         GtkAccessibleState     state);

extern
char *          gtk_test_accessible_check_property      (GtkAccessible         *accessible,
                                                         GtkAccessibleProperty  property,
                                                         ...);
extern
char *          gtk_test_accessible_check_relation      (GtkAccessible         *accessible,
                                                         GtkAccessibleRelation  relation,
                                                         ...);
extern
char *          gtk_test_accessible_check_state         (GtkAccessible         *accessible,
                                                         GtkAccessibleState     state,
                                                         ...);

extern
void    gtk_test_accessible_assertion_message_role      (const char        *domain,
                                                         const char        *file,
                                                         int                line,
                                                         const char        *func,
                                                         const char        *expr,
                                                         GtkAccessible     *accessible,
                                                         GtkAccessibleRole  expected_role,
                                                         GtkAccessibleRole  actual_role);